tests/snapshots/formats__kdb__aes.kdb.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ aes.kdb — KeePass 1, 3 groups, 4 entries, AES-256-CBC, 100 rounds  [0x0+0x4cc]
    Signature 1: 0x9aa2d903  [0x0+0x4]
    Signature 2: 0xb54bfb65  [0x4+0x4]
    Flags: 0x3 [SHA2 | RIJNDAEL]  [0x8+0x4]
    Version: 0x30004  [0xc+0x4]
    Master seed: 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f  |................|  [0x10+0x10]
    Encryption IV: 10 11 12 13 14 15 16 17 18 19 1a 1b 1c 1d 1e 1f  |................|  [0x20+0x10]
    Groups: 3  [0x30+0x4]
    Entries: 4  [0x34+0x4]
    Contents hash: db fe 04 66 29 9b 2a 72 8c 39 7c f8 f7 93 28 6b …  |...f).*r.9|...(k|  [0x38+0x20]
    Transform seed: 20 21 22 23 24 25 26 27 28 29 2a 2b 2c 2d 2e 2f …  | !"#$%&'()*+,-./|  [0x58+0x20]
    Key transform rounds: 100  [0x78+0x4]
  ▾ Payload — unlocked  [0x7c+0x450]
      Decrypted — AES-256-CBC, 1098 bytes, contents hash verified  [#1:0x0+0x44a]
    ▾ Groups — 3
      ▾ General — level 0  [#1:0x0+0x66]
          Group ID: 1  [#1:0x0+0xa] → #1:0x6+0x4
          Name: "General"  [#1:0xa+0xe] → #1:0x10+0x8
          Created: 2024-05-06 07:08:09 UTC  [#1:0x18+0xb] → #1:0x1e+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x23+0xb] → #1:0x29+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x2e+0xb] → #1:0x34+0x5
          Expires — never  [#1:0x39+0xb] → #1:0x3f+0x5
          Image ID: 1  [#1:0x44+0xa] → #1:0x4a+0x4
          Level: 0  [#1:0x4e+0x8] → #1:0x54+0x2
          Flags: 0x0  [#1:0x56+0xa] → #1:0x5c+0x4
          End  [#1:0x60+0x6] → #1:0x66+0x0
      ▾ Web — level 1  [#1:0x66+0x62]
          Group ID: 2  [#1:0x66+0xa] → #1:0x6c+0x4
          Name: "Web"  [#1:0x70+0xa] → #1:0x76+0x4
          Created: 2024-05-06 07:08:09 UTC  [#1:0x7a+0xb] → #1:0x80+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x85+0xb] → #1:0x8b+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x90+0xb] → #1:0x96+0x5
          Expires — never  [#1:0x9b+0xb] → #1:0xa1+0x5
          Image ID: 1  [#1:0xa6+0xa] → #1:0xac+0x4
          Level: 1  [#1:0xb0+0x8] → #1:0xb6+0x2
          Flags: 0x0  [#1:0xb8+0xa] → #1:0xbe+0x4
          End  [#1:0xc2+0x6] → #1:0xc8+0x0
      ▾ Mail — level 0  [#1:0xc8+0x63]
          Group ID: 3  [#1:0xc8+0xa] → #1:0xce+0x4
          Name: "Mail"  [#1:0xd2+0xb] → #1:0xd8+0x5
          Created: 2024-05-06 07:08:09 UTC  [#1:0xdd+0xb] → #1:0xe3+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0xe8+0xb] → #1:0xee+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0xf3+0xb] → #1:0xf9+0x5
          Expires — never  [#1:0xfe+0xb] → #1:0x104+0x5
          Image ID: 1  [#1:0x109+0xa] → #1:0x10f+0x4
          Level: 0  [#1:0x113+0x8] → #1:0x119+0x2
          Flags: 0x0  [#1:0x11b+0xa] → #1:0x121+0x4
          End  [#1:0x125+0x6] → #1:0x12b+0x0
    ▾ Entries — 4
      ▾ Router — admin, http://192.168.0.1/, in General  [#1:0x12b+0xbe]
          UUID: "01010101010101010101010101010101"  [#1:0x12b+0x16] → #1:0x131+0x10
          Group ID: 1  [#1:0x141+0xa] → #1:0x147+0x4
          Image ID: 0  [#1:0x14b+0xa] → #1:0x151+0x4
          Title: "Router"  [#1:0x155+0xd] → #1:0x15b+0x7
          URL: "http://192.168.0.1/"  [#1:0x162+0x1a] → #1:0x168+0x14
          User name: "admin"  [#1:0x17c+0xc] → #1:0x182+0x6
          Password — protected  [#1:0x188+0xe] → #1:0x18e+0x8
          Notes: "Behind the TV"  [#1:0x196+0x14] → #1:0x19c+0xe
          Created: 2024-05-06 07:08:09 UTC  [#1:0x1aa+0xb] → #1:0x1b0+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x1b5+0xb] → #1:0x1bb+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x1c0+0xb] → #1:0x1c6+0x5
          Expires — never  [#1:0x1cb+0xb] → #1:0x1d1+0x5
          Attachment name: ""  [#1:0x1d6+0x7] → #1:0x1dc+0x1
          Attachment data — 0 bytes  [#1:0x1dd+0x6] → #1:0x1e3+0x0
          End  [#1:0x1e3+0x6] → #1:0x1e9+0x0
      ▾ Example — alice, https://example.com/, in Web  [#1:0x1e9+0xb9]
          UUID: "02020202020202020202020202020202"  [#1:0x1e9+0x16] → #1:0x1ef+0x10
          Group ID: 2  [#1:0x1ff+0xa] → #1:0x205+0x4
          Image ID: 0  [#1:0x209+0xa] → #1:0x20f+0x4
          Title: "Example"  [#1:0x213+0xe] → #1:0x219+0x8
          URL: "https://example.com/"  [#1:0x221+0x1b] → #1:0x227+0x15
          User name: "alice"  [#1:0x23c+0xc] → #1:0x242+0x6
          Password — protected  [#1:0x248+0x14] → #1:0x24e+0xe
          Notes: ""  [#1:0x25c+0x7] → #1:0x262+0x1
          Created: 2024-05-06 07:08:09 UTC  [#1:0x263+0xb] → #1:0x269+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x26e+0xb] → #1:0x274+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x279+0xb] → #1:0x27f+0x5
          Expires — never  [#1:0x284+0xb] → #1:0x28a+0x5
          Attachment name: ""  [#1:0x28f+0x7] → #1:0x295+0x1
          Attachment data — 0 bytes  [#1:0x296+0x6] → #1:0x29c+0x0
          End  [#1:0x29c+0x6] → #1:0x2a2+0x0
      ▾ Mailbox — alice@example.com, imaps://mail.example.com, in Mail  [#1:0x2a2+0xe5]
          UUID: "03030303030303030303030303030303"  [#1:0x2a2+0x16] → #1:0x2a8+0x10
          Group ID: 3  [#1:0x2b8+0xa] → #1:0x2be+0x4
          Image ID: 0  [#1:0x2c2+0xa] → #1:0x2c8+0x4
          Title: "Mailbox"  [#1:0x2cc+0xe] → #1:0x2d2+0x8
          URL: "imaps://mail.example.com"  [#1:0x2da+0x1f] → #1:0x2e0+0x19
          User name: "alice@example.com"  [#1:0x2f9+0x18] → #1:0x2ff+0x12
          Password — protected  [#1:0x311+0xd] → #1:0x317+0x7
          Notes: ""  [#1:0x31e+0x7] → #1:0x324+0x1
          Created: 2024-05-06 07:08:09 UTC  [#1:0x325+0xb] → #1:0x32b+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x330+0xb] → #1:0x336+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x33b+0xb] → #1:0x341+0x5
          Expires — never  [#1:0x346+0xb] → #1:0x34c+0x5
          Attachment name: "hello.txt"  [#1:0x351+0x10] → #1:0x357+0xa
          Attachment data — 26 bytes  [#1:0x361+0x20] → #1:0x367+0x1a
        ▾ Attachment — UTF-8 text, LF line endings, 1 line  [#1:0x367+0x1a]
            Encoding: "UTF-8"
            Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#1:0x367+0x1a]
              Line 1: "Hello from an attachment."  [#1:0x367+0x19]
          End  [#1:0x381+0x6] → #1:0x387+0x0
      ▾ Meta-Info — meta stream: KPX_GROUP_TREE_STATE  [#1:0x387+0xc3]
          UUID: "04040404040404040404040404040404"  [#1:0x387+0x16] → #1:0x38d+0x10
          Group ID: 1  [#1:0x39d+0xa] → #1:0x3a3+0x4
          Image ID: 0  [#1:0x3a7+0xa] → #1:0x3ad+0x4
          Title: "Meta-Info"  [#1:0x3b1+0x10] → #1:0x3b7+0xa
          URL: "$"  [#1:0x3c1+0x8] → #1:0x3c7+0x2
          User name: "SYSTEM"  [#1:0x3c9+0xd] → #1:0x3cf+0x7
          Password — protected  [#1:0x3d6+0x7] → #1:0x3dc+0x1
          Notes: "KPX_GROUP_TREE_STATE"  [#1:0x3dd+0x1b] → #1:0x3e3+0x15
          Created: 2024-05-06 07:08:09 UTC  [#1:0x3f8+0xb] → #1:0x3fe+0x5
          Modified: 2024-05-06 07:08:09 UTC  [#1:0x403+0xb] → #1:0x409+0x5
          Accessed: 2024-05-06 07:08:09 UTC  [#1:0x40e+0xb] → #1:0x414+0x5
          Expires — never  [#1:0x419+0xb] → #1:0x41f+0x5
          Attachment name: "bin-stream"  [#1:0x424+0x11] → #1:0x42a+0xb
          Attachment data — 9 bytes  [#1:0x435+0xf] → #1:0x43b+0x9
        ▾ Attachment  [#1:0x43b+0x9]
            ! unsupported: unrecognized format [#1:0x43b+0x9]
          End  [#1:0x444+0x6] → #1:0x44a+0x0
